update keybindings for screenshots

--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -27,9 +27,9 @@ bind = , Print, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focu
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | tee "$(xdg-user-dir PICTURES)/$(date +'%Y-%m-%d_%H-%M-%S_grim.png')" - | wl-copy && notify-send "Screenshot taken" 
 
 # Screenshot active screen with swappy  
-bind = $mainMod SHIFT, 3, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused) | .name')" - | swappy -f - 
+bind = $mainMod2 SHIFT, 3, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused) | .name')" - | swappy -f - 
 # Screenshot selected region with swappy 
-bind = $mainMod SHIFT, 4, exec, grim -g "$(slurp)" - | swappy -f -
+bind = $mainMod2 SHIFT, 4, exec, grim -g "$(slurp)" - | swappy -f -
 
 bind = $mainMod, C, exec, wl-color-picker clipboard
 
