--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -13,7 +13,7 @@ bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, E, exec, $browser
 bind = $mainMod, T, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod SHIFT, F, fullscreen
