--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,6 +27,7 @@ $browser = firefox
 # exec-once = hyprpaper
 exec-once = waybar &
 exec-once = waypaper --restore
+exec-once = hyprsunset
 
 #############################
 ### ENVIRONMENT VARIABLES ###
