--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,9 +2,8 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/ 
 
 # Apple Cinema Display
-# monitor = HDMI-A-2,1920x1200@59.95Hz,0x0,1
-
-monitor = DP-2,1920x1080@180.00Hz,0x0,1
+monitor = HDMI-A-2,1920x1200@59.95Hz,0x0,1
+monitor = DP-2,1920x1080@120.00Hz,-1080x0,1,transform,1
 
 ### MY PROGRAMS ###
 ###################
@@ -27,7 +26,7 @@ $browser = firefox
 # exec-once = hyprpaper
 exec-once = waybar &
 exec-once = waypaper --restore
-exec-once = hyprsunset
+# exec-once = hyprsunset
 
 #############################
 ### ENVIRONMENT VARIABLES ###
