update workspace allocation for monitors

--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -59,17 +59,17 @@ bind = SUPER SHIFT, up, movewindow, u
 bind = SUPER SHIFT, right, movewindow, r
 
 # Assign workspaces to specific monitors
-#workspace=1,monitor:HDMI-A-2
-#workspace=2,monitor:HDMI-A-2
-#workspace=3,monitor:HDMI-A-2
-#workspace=4,monitor:HDMI-A-2
-#workspace=5,monitor:HDMI-A-2
-#workspace=6,monitor:HDMI-A-2
-#workspace=7,monitor:HDMI-A-2
-#workspace=8,monitor:HDMI-A-2
+workspace=1,monitor:HDMI-A-2
+workspace=2,monitor:HDMI-A-2
+workspace=3,monitor:HDMI-A-2
+workspace=4,monitor:HDMI-A-2
+workspace=5,monitor:HDMI-A-2
+workspace=6,monitor:HDMI-A-2
+workspace=7,monitor:HDMI-A-2
+workspace=8,monitor:HDMI-A-2
 
-#workspace=9,monitor:DP-1
-#workspace=10,monitor:DP-1
+workspace=9,monitor:DP-2
+workspace=10,monitor:DP-2
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
