--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,7 +12,7 @@ monitor = DP-2,1920x1080@120.00Hz,-1080x0,1,transform,1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = nautilus
+$fileManager = dolphin 
 $menu = rofi -show drun
 $browser = firefox
 
