--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -13,7 +13,7 @@ bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, E, exec, $browser
 bind = $mainMod, T, togglefloating,
-bind = $mainMod, SPACE, exec, $menu
+bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod SHIFT, F, fullscreen
@@ -66,8 +66,8 @@ workspace=4,monitor:HDMI-A-2
 workspace=5,monitor:HDMI-A-2
 workspace=6,monitor:HDMI-A-2
 workspace=7,monitor:HDMI-A-2
-workspace=8,monitor:HDMI-A-2
 
+workspace=8,monitor:DP-2
 workspace=9,monitor:DP-2
 workspace=10,monitor:DP-2
 
