--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,7 +14,7 @@ monitor = DP-2,1920x1080@120.00Hz,-1080x0,1,transform,1
 $terminal = kitty
 $fileManager = dolphin 
 $menu = rofi -show drun
-$browser = firefox
+$browser = google-chrome-stable
 
 #################
 ### AUTOSTART ###
