disable system power off keybinding

--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -18,7 +18,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod SHIFT, F, fullscreen
 bind = $mainMod2, L, exec, hyprlock
-bind = $mainMod SHIFT, P, exec, systemctl poweroff
+# bind = $mainMod SHIFT, P, exec, systemctl poweroff
 
 
 # Screenshot active screen into clipboard 
