--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,6 +27,7 @@ $browser = google-chrome-stable
 exec-once = waybar &
 exec-once = waypaper --restore
 # exec-once = hyprsunset
+exec-once = fcitx5 -d
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -36,6 +37,11 @@ exec-once = waypaper --restore
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+env = QT_IM_MODULE,fcitx
+env = XMODIFIERS,@im=fcitx
+env = SDL_IM_MODULE,fcitx
+env = GLFW_IM_MODULE,ibus
 
 ###################
 ### PERMISSIONS ###
